SERVER-38616 LDAPArrayIterator behaves incorrectly when initialized with an empty array

GitOrigin-RevId: a676a80464e06be415fcd644e3cda3d3547447f0