src/mongo/db/modules/enterprise/src/ldap/ldap_connection_options_test.cpp
@@ -4,11 +4,23 @@
 
 #include "mongo/platform/basic.h"
 
+#ifdef _WIN32
+// clang-format off
+#include <winldap.h>
+#include <winber.h>  // winldap.h must be included before
+// clang-format on
+#else
+#include <ldap.h>
+#endif
+
 #include "mongo/unittest/unittest.h"
 
 #include "ldap_connection_options.h"
+#include "connections/ldap_connection_helpers.h"
+
 
 namespace mongo {
+namespace {
 
 TEST(LDAPBindTypeTests, CanStringifySimple) {
     ASSERT_EQ("simple", authenticationChoiceToString(LDAPBindType::kSimple));
@@ -69,5 +81,15 @@ TEST(ParseHostURIs, TwoCommaSeparatedHostsWithProtocol) {
     ASSERT_FALSE(result.isOK());
 }
 
+// Test: Active Directory may return an array with a single null value so verify the iterator works
+// and treats this case as an empty array
+TEST(LdapArrayTest, VerifyEquality) {
 
+    std::vector<berval*> values;
+    values.push_back(nullptr);
+
+    ASSERT_TRUE(LDAPArrayIterator<berval*>(values.data()) == LDAPArrayIterator<berval*>(nullptr));
+}
+
+}  // namespace
 }  // namespace mongo
